# goit-pythonweb-hw-06

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  models.py  pyproject.toml  requirements.txt
alembic/: env.py
db/: config.py
src/: models.py  my_select.py
