[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = ""
authors = ["i.yanchyk <i.yanchyk@steel.mil.ua>"]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
alembic = "^1.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "goit_pythonweb_hw_06"
from = "src"
